--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,2 +1,16 @@
 // Import all of Bootstrap's CSS
 @import "bootstrap/scss/bootstrap";
+
+// Import Google fonts
+@import url("https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&family=Rubik:wght@400;500&display=swap");
+
+// Global custom fonts
+body {
+	font-family: "Rubik", sans-serif;
+}
+
+h1,
+h2,
+h3 {
+	font-family: "Goldman", cursive;
+}
