--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,8 @@
+$success: #23bc23;
+
+// TODO extend bootstrap colors
+$btn-success-alt: #2b392b;
+
 // Import all of Bootstrap's CSS
 @import "bootstrap/scss/bootstrap";
 
@@ -13,4 +18,24 @@ h1,
 h2,
 h3 {
 	font-family: "Goldman", cursive;
+	text-transform: uppercase;
+}
+
+.btn-success-alt {
+	background: $btn-success-alt;
+	color: #fff;
+	transition: all 500ms;
+}
+.btn-success-alt:hover {
+	color: #fff;
+	background: $success;
+}
+
+// Hero section styling
+.hero {
+	background: url("https://placehold.co/1200x400/3d3d3d/000");
+	height: 100vh;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: bottom center;
 }
