--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,7 +1,10 @@
 $success: #23bc23;
 
+$secondary: #ebf8ef;
+
 // TODO extend bootstrap colors
 $btn-success-alt: #2b392b;
+
 
 // Import all of Bootstrap's CSS
 @import "bootstrap/scss/bootstrap";
@@ -16,7 +19,8 @@ body {
 
 h1,
 h2,
-h3 {
+h3, 
+h5 {
 	font-family: "Goldman", cursive;
 	text-transform: uppercase;
 }
@@ -38,4 +42,29 @@ h3 {
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: bottom center;
+}
+
+.hero-about {
+	background: url("../img/image9.png");
+	height: 100vh;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: bottom center;
+}
+
+.rounded-6 {
+	border-radius: 3.5rem;
+} 
+
+
+.input-box {
+	background-color: #d0ddd5;
+}
+
+.input-box:focus {
+	background-color: #d0ddd5;
+}
+
+.label-text {
+	color: #2b392b;
 }
