--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -52,6 +52,14 @@ h5 {
 	background-position: bottom center;
 }
 
+.hero-service {
+	background: url("../img/hero-service.png");
+	height: 100vh;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: bottom center;
+}
+
 .rounded-6 {
 	border-radius: 3.5rem;
 } 
